kind-deployment/app/alpine-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine-console
spec:
  containers:
  - name: alpine
    image: ssasso/alpconsole
