kind-deployment/app/animal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: animal
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: animal
